More jquery converting, including getting the submission buttons working for, "Send a Message" (and only send a message - invite and send url need to be done!)

--- a/dada/DADA/Template/templates/adv_sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/adv_sending_preferences_screen.tmpl
@@ -1,14 +1,5 @@
 <!-- begin adv_sending_preferences_screen.tmpl -->
 
-<script type="text/javascript">
-$(document).ready(function() {
-	$("#misc_options").hide(); 
-}); 
-</script> 
-
-
-
-
 <!-- tmpl_set name="title" value="Mail Sending &#187; Advanced Sending Preferences" -->
 <div id="screentitle"> 
 	<div id="screentitlepadding">
@@ -16,7 +7,7 @@ $(document).ready(function() {
 	</div> 
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
-
+<div id="adv_sending_preferences"></div>
 
 <!-- tmpl_if done -->
 	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
