--- a/dada/DADA/Template/templates/edit_html_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_html_type_screen.tmpl
@@ -100,7 +100,7 @@
 
 <fieldset>
 	<legend>
-   <a href="#" onclick="toggleDisplay('template_tags');return false;">
+	<a href="#" class="toggleDivs" data-target="template_tags">
     +/- 
    </a> Available Template Tags
    </legend>    
