--- a/dada/DADA/Template/templates/file_attachments_widget.tmpl
+++ b/dada/DADA/Template/templates/file_attachments_widget.tmpl
@@ -3,7 +3,7 @@
 <fieldset> 
 
 <legend>
-       <a href="#" id="partial_sending_options_widget_label" onclick="toggleDisplay('file_attachments');return false;">
+	   <a href="#" class="toggleDivs" data-target="file_attachments">
       +/- 
      </a>File Attachments
 </legend>
