--- a/dada/DADA/Template/templates/list_invite_screen.tmpl
+++ b/dada/DADA/Template/templates/list_invite_screen.tmpl
@@ -229,7 +229,8 @@
 	     <fieldset style="background:#e6e6e6"> 
 
 	     <legend>
-	      <a href="#" onclick="toggleDisplay('html_message');return false;">+   /-</a>HTML Version
+		<a href="#" class="toggleDivs" data-target="html_message">
+	      +/-</a>HTML Version
 	     </legend>
       
 
@@ -253,7 +254,8 @@
 	 <fieldset style="background:#e6e6e6"> 
   
 			 <legend>
-			  <a href="#" onclick="toggleDisplay('text_message');return false;">+/-</a>PlainText Version
+				<a href="#" class="toggleDivs" data-target="text_message">
+			 +/-</a>PlainText Version
 			 </legend>
 		 
  
