--- a/dada/DADA/Template/templates/manage_script_screen.tmpl
+++ b/dada/DADA/Template/templates/manage_script_screen.tmpl
@@ -12,7 +12,9 @@
 	This is <!-- tmpl_var name="PROGRAM_NAME" --> version <strong><!-- tmpl_var name="VER" --></strong> .
 </p>
 <p>
-	<strong><a href="#" onclick="toggleDisplay('extended_info');return false;">+/- More Information</a></strong>
+	<strong>
+		<a href="#" class="toggleDivs" data-target="extended_info">
+			+/- More Information</a></strong>
 </p>
 <div id="extended_info" style="display:none">
 	<table cellspacing="0" cellpadding="5">
