--- a/dada/DADA/Template/templates/message_headers_fieldset_widget.tmpl
+++ b/dada/DADA/Template/templates/message_headers_fieldset_widget.tmpl
@@ -7,7 +7,7 @@
  </legend>
 	<p>
 		  <strong>
-		   <a href="#" onclick="toggleDisplay('headers');return false;">
+			<a href="#" class="toggleDivs" data-target="headers">
 			+/-
 		   </a> Additional Headers
 		  </strong>
