--- a/dada/DADA/Template/templates/send_email_message_body_help_widget.tmpl
+++ b/dada/DADA/Template/templates/send_email_message_body_help_widget.tmpl
@@ -1,6 +1,6 @@
-<!-- begin send_email_message_body_help_widget --> 
+<!-- begin send_email_message_body_help_widget.tmpl --> 
 
-<div id="message_body_help" style="display:none;">
+<div id="message_body_help">
 
 <h2>
  <!-- tmpl_var PROGRAM_NAME --> supports sending messages formatted in HTML, Plaintext, or both!
@@ -35,7 +35,7 @@
 </ul>
 
 <div style="text-align: center;">
-	<input value="Thanks!" onclick="Modalbox.hide()" type="button" class="small_button" />
+	<input value="Thanks!" type="button" class="small_button" id="dialog-modal-close" />
 </div> 
 
 	</div>
