--- a/dada/DADA/Template/templates/sending_monitor_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_screen.tmpl
@@ -266,8 +266,8 @@
 <fieldset> 
 	
 <legend>
-	 <a href="#" onclick="toggleDisplay('verbose_sending_information');return false;">
- +/-
+	<a href="#" class="toggleDivs" data-target="verbose_sending_information">
+	 +/-
  </a> Verbose Sending Information
 </legend>
 
