--- a/dada/DADA/Template/templates/subscriber_field_tags_listing_widget.tmpl
+++ b/dada/DADA/Template/templates/subscriber_field_tags_listing_widget.tmpl
@@ -5,7 +5,7 @@
     
      <fieldset>
       <legend>  
-      <a href="#" onclick="toggleDisplay('subscriber_profile_field_tags');return false;">
+	  <a href="#" class="toggleDivs" data-target="subscriber_profile_field_tags">
       +/-
      </a> Subscriber Profile Field Tags
 
