--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -6,7 +6,8 @@
 
 <fieldset> 
 <legend>
-	<a href="#" onclick="toggleDisplay('install_log');return false;">+/-</a> Installation Log:
+	<a href="#" class="toggleDivs" data-target="install_log">
++/-</a> Installation Log:
 </legend>
 <div id="install_log" style="display:none"> 
 	<!-- tmpl_var install_log -->
