--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -591,7 +591,7 @@
 
 <fieldset>
 	<legend>
-   <a href="#" onclick="toggleDisplay('adv_options');return false;">
+   <a href="#" class="toggleDivs" data-target="adv_options">
     +/- 
    </a> Advanced Options
    </legend>    
@@ -638,7 +638,7 @@
 
 <fieldset>
 	<legend>
-   <a href="#" onclick="toggleDisplay('template_tags');return false;">
+   <a href="#" class="toggleDivs" data-target="template_tags">
     +/- 
    </a> Available Template Tags
    </legend>    
