--- a/dada/DADA/Template/templates/multiple_list_sending_widget.tmpl
+++ b/dada/DADA/Template/templates/multiple_list_sending_widget.tmpl
@@ -12,7 +12,7 @@
  	   <fieldset>
      
 		 <legend>
-	       <a href="#" id="multiple_list_sending" onclick="toggleDisplay('multiple_list_sending_widget');return false;">
+			<a href="#" class="toggleDivs" data-target="multiple_list_sending_widget">
 	      +/- 
 	     </a>Multiple Mailing List Sending
 	     </legend>    
@@ -27,16 +27,7 @@
 				 <p>
 				  <em>Also</em> send a copy of this message to subscribers of the following mailing lists:
 				</p>
-				<p>
-				   <a href="#" onclick="SetListChecked(1);return false;">
-				    check all 
-				   </a>
-				   :: 
-				   <a href="#" onclick="SetListChecked(0);return false;">
-				    uncheck all
-				   </a>
-				  </p>
-
+				
 				 <div class="simplebox" style="max-height:150px;overflow:auto;">
 			  
 					<!-- tmpl_var global_list_sending_checkbox_widget --> 
@@ -44,13 +35,12 @@
 		 		</div>
 	
 		  <p>
-		   <a href="#" onclick="SetListChecked(1);return false;">
-		    check all 
-		   </a>
-		   :: 
-		   <a href="#" onclick="SetListChecked(0);return false;">
-		    uncheck all
-		   </a>
+		    <a href="#" class="linkToggleCheckboxes" data-state="true" data-target_class="alternative_list">Check All</a> 
+		|
+		
+		
+		    <a href="#" class="linkToggleCheckboxes" data-state="false" data-target_class="alternative_list">Uncheck All</a> 
+		
 		  </p>
 	
 		<!-- tmpl_if MULTIPLE_LIST_SENDING_TYPE_INDIVIDUAL --> 
@@ -64,7 +54,7 @@
 			Subscribers who have email addresses subscribed to more than one mailing list will receive only one copy of this message.
 		  </p>
 		<!-- tmpl_else --> 
-			<input type="hidden" name="multi_list_send_no_dupes" id="multi_list_send_no_dupes" value="1" />
+			<input style="display:none" type="checkbox" name="multi_list_send_no_dupes" id="multi_list_send_no_dupes" value="1" checked="checked" />
 		<!-- /tmpl_if --> 
 		
 		
