--- a/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
+++ b/dada/DADA/Template/templates/partial_sending_options_widget.tmpl
@@ -8,7 +8,8 @@
 
     <fieldset>
      <legend>
-       <a href="#" id="partial_sending_options_widget_label" onclick="toggleDisplay('partial_sending_options_widget', 'partial_sending_options_widget_label');return false;">
+      
+	  <a href="#" class="toggleDivs" data-target="partial_sending_options_widget">
       +/- 
      </a>Partial Mailing List Sending
      </legend>    
@@ -19,6 +20,7 @@
      Send your Mailing List Message  to your Subscribers where their:
     </p> 
     
+	<div id="field_comparisons"> 
     <table> 
 	
     <!-- tmpl_loop undotted_fields --> 
@@ -52,7 +54,7 @@
     <!-- /tmpl_loop --> 
     
     </table> 
-    
+    </div> 
 	
     <div class="buttonfloat">
      <input type="button" value="Preview Who's Getting This Message..." class="cautionary" onClick="get_partial_list()" />  
@@ -73,68 +75,45 @@
 	    //<![CDATA[
 
 		 function get_partial_list(){ 
+
+
+			var f_params = {}; 
 			
-			var al         = new Array();; 
-			var alternative_lists = ''; 
+			var al                       = new Array();
+			var alternative_lists        = ''; 
 			var multi_list_send_no_dupes = 0; 
-				
-				/* Is there a prototype.js way of doing this? */
 			
-				if (document.getElementById('alternative_list') != null) {
-					/* This basically says that if we have one, but it has no length, 
-					   only one element. Which is ridiculous. */ 
-						
-					if(document.send_email.alternative_list.length){ 
-						for (var i=0; i < document.send_email.alternative_list.length; i++)
-						{
-				   			if (document.send_email.alternative_list[i].checked)
-				      		{
-				      			al.push(document.send_email.alternative_list[i].value);
-					 		}
-				   		}
-					}
-					else { 
-						if(document.send_email.alternative_list.checked) 
-						{  
-							al.push(document.getElementById('alternative_list').value);
-						}
-					}
-				alternative_lists = al.join(','); 
+			
+			$("#field_comparisons :input").each(function() {
+			      f_params[this.name] = this.value; 
+			});
+			$("input:checkbox[name=alternative_list]:checked").each(function() {
+		  		al.push(this.value); 
+			});
+			alternative_lists = al.join(','); 
+			if(
+				$('#multi_list_send_no_dupes').val() == 1 && 
+				$("#multi_list_send_no_dupes").prop("checked") == true
+			) { 
+				multi_list_send_no_dupes = 1;
 			}
-				
-			if (document.getElementById('multi_list_send_no_dupes') != null) {
-				multi_list_send_no_dupes = $F('multi_list_send_no_dupes'); 
-			}
-			new Ajax.Updater(
-		
-				'previewMessageReceivers', '<!-- tmpl_var S_PROGRAM_URL -->', 
-				{ 
-				    method: 'post', 
-					parameters: {
-						alternative_lists:         alternative_lists,
-						multi_list_send_no_dupes: multi_list_send_no_dupes,
-						
-						 <!-- tmpl_loop undotted_fields -->
-							field_comparison_type_<!-- tmpl_var name -->: $F('field_comparison_type_<!-- tmpl_var name -->'), 
-							field_value_<!-- tmpl_var name -->: $F('field_value_<!-- tmpl_var name -->'), 
-						<!-- /tmpl_loop -->
-						f:                        'previewMessageReceivers'
-						
-						},
-
-				onCreate: 	 function() {
-					$('previewMessageReceivers_loading').show(); 
-					$('previewMessageReceivers').hide(); 
-					
-				},
-				onComplete: 	 function() {
-					$('previewMessageReceivers_loading').hide(); 
-					Effect.BlindDown('previewMessageReceivers');
-
-				}
-
-
-				});
+			f_params['f']                        = 'previewMessageReceivers';
+			f_params['alternative_lists']        = alternative_lists,
+			f_params['multi_list_send_no_dupes'] = multi_list_send_no_dupes,
+			
+			$('#previewMessageReceivers_loading').show(); 
+			$('#previewMessageReceivers').hide(); 	
+			var request = $.ajax({
+				url: "<!-- tmpl_var S_PROGRAM_URL -->",
+				type: "POST",
+				cache: false,
+				data: f_params,
+				dataType: "html"
+			});
+			request.done(function(content) {
+				$("#previewMessageReceivers_loading").hide();
+				$("#previewMessageReceivers").html( content ).show( 'blind' );
+			});
 		}
 	    //]]>
 	</script>
