--- a/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
@@ -298,7 +298,8 @@ Current Mass Mailings:
 
 
 <p style="font-weight:bold;">
- <a href="#" onclick="toggleDisplay('verbose_sending_information');return false;">
+	
+ <a href="#" class="toggleDivs" data-target="verbose_sending_information">
  +/- 
  </a>Verbose Sending Information...
 </p>
