add_email, send_email, send_url_email should all be fixed and jquery'd

--- a/dada/DADA/Template/templates/add_screen.tmpl
+++ b/dada/DADA/Template/templates/add_screen.tmpl
@@ -30,7 +30,7 @@
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
-<div id="add_screen"></div>
+<div id="add"></div>
 
 
 <!-- tmpl_if EXPR="(type eq 'list')" -->
