--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -30,7 +30,7 @@ Membership (<!-- tmpl_var type_title -->)
 </div>
 
 </div> 
-
+<div id="add_email"></div>
 
 <!-- tmpl_if expr="(type eq 'list')" --> 
 	<!-- tmpl_if ENFORCE_CLOSED_LOOP_OPT_IN -->
@@ -96,7 +96,7 @@ Membership (<!-- tmpl_var type_title -->)
 
 
 
-<form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+<form name="confirm_add" id="confirm_add" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
  <input type="hidden" name="f"              value="add_email" />
  <input type="hidden" name="type"           value="<!-- tmpl_var type -->" />
  <input type="hidden" name="return_to"      value="<!-- tmpl_var return_to -->" />
@@ -595,17 +595,17 @@ Invalid Email Addresses
 
 
 	 <div class="buttonfloat">
-	  <input type="button" class="cautionary" value="<< Re-Enter Addresses" onclick="history.back();return false;" />
+	  <input type="button" class="cautionary previous" value="<< Re-Enter Addresses" />
 
 	<!-- tmpl_if expr="(type eq 'list')" --> 
-	  <input type="submit"  name="process" value="Send Invitation... >>" <!-- tmpl_if list_settings.closed_list -->disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing"<!-- /tmpl_if --> />
+	  <input type="submit"  name="process" value="Send Invitation... >>" <!-- tmpl_if list_settings.closed_list -->disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing addingemail"<!-- /tmpl_if --> />
 	<!-- /tmpl_if -->
 
 	<!-- tmpl_if expr="(type eq 'list')" --> 
 		<!-- tmpl_if ENFORCE_CLOSED_LOOP_OPT_IN --> 
 			<!-- ... --> 
 		<!-- tmpl_else --> 
-			<input type="submit" <!-- tmpl_unless list_settings.enable_mass_subscribe -->disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing"<!-- /tmpl_unless -->  name="process"  value="Subscribe Checked Addresses >>" onclick="return warnAboutMassSubscription(this.form);" />	
+			<input type="submit" <!-- tmpl_unless list_settings.enable_mass_subscribe -->disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing addingemail warnAboutMassSubscription"<!-- /tmpl_unless -->  name="process"  value="Subscribe Checked Addresses >>" />	
 		<!-- /tmpl_if --> 
 	<!-- tmpl_else --> 
 		<input type="submit" class="processing" name="process"  value="Add Checked Addresses to <!-- tmpl_var type_title --> >>" />
