--- a/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
@@ -8,6 +8,7 @@
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
+<div id="sending_monitor_index"></div> 
 
 
 <div class="clearskiesbox">
@@ -32,10 +33,6 @@
 
 
 </div> 
-
-<script type="text/javascript">
-  refreshpage(60, "<!-- tmpl_var S_PROGRAM_URL -->?f=sending_monitor"); 
- </script> 
 
 
  <!-- tmpl_if killed_it -->
