--- a/dada/DADA/Template/templates/sending_monitor_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_screen.tmpl
@@ -122,7 +122,8 @@
 	   </td> 
 	  </tr> 
 	 </table> 
- 
+ 	 <!-- tmpl_if comment --> 
+
 	 <table width="502" cellpadding="0" cellspacing="0" border="0" align="center">
 	  <tr> 
 	   <td> 
@@ -133,10 +134,15 @@
 	   </td>
 	  </tr>
 	 </table> 
+	<!--/tmpl_if --> 
 
-
-
-
+	<style>
+	.ui-progressbar .ui-progressbar-value { background-image: url(http://localhost/images/pbar-ani.gif); }
+	</style>
+	<div id="progressbarWrapper" style="width:500px;height:22px;margin-left:auto;margin-right:auto" class="ui-widget-default">
+	<div id="progressbar" style="height:100%;"></div>
+	</div> 
+	<form><input type="hidden" id="progressbar_percent" value="<!-- tmpl_var percent_done -->" /></form>  
 	 <div> 
 
 	  <table align="center" width="502" >
