--- a/dada/DADA/Template/templates/sending_monitor_container_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_container_screen.tmpl
@@ -12,38 +12,23 @@
 	<input type="hidden" name="show_tracker"         id="show_tracker"         value="<!-- tmpl_var list_settings.tracker_show_message_reports_in_mailing_monitor -->" />  	
 	<input type="hidden" name="refresh_after"        id="refresh_after"        value="<!-- tmpl_var refresh_after -->" /> 
 	<input type="hidden" name="show_tracker_reports" id="show_tracker_reports" value="<!-- tmpl_var list_settings.tracker_show_message_reports_in_mailing_monitor -->" />
-	
+	<input type="hidden" name="tracker_url"          id="tracker_url"          value="<!-- tmpl_var tracker_url -->" />
 </form>
-
-<script type="text/javascript">
-    function refresh_tracker()
-    {
-        document.getElementById('tracker_plugin').contentWindow.location.reload();
-	    setTimeout("refresh_tracker()",5000 * 60);
-    }	
-	
-    //]]>
-</script>
-
-
 
 
 <div id="sending_monitor_interface"></div> 
 
 <!-- tmpl_if list_type_isa_list --> 
 	<!-- tmpl_if list_settings.tracker_show_message_reports_in_mailing_monitor --> 
-
+	<div id="tracker_reports"> 
 		<fieldset> 
 		<legend>Tracker Reports</legend>
-			<div style="padding:10px; margin: 10px; border:0px">
-			<iframe id="tracker_plugin" src="<!-- tmpl_var tracker_url -->?chrome=0;f=m;mid=<!-- tmpl_var message_id -->"  width="100%" height="640"></iframe> 
-		</div> 
-
+			<div id="tracker_plugin"></div> 
 		</fieldset>
 
 	<!-- /tmpl_if --> 
 <!-- /tmpl_if --> 
-
+</div>
 
 
 
