--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/modalbox.css" type="text/css"  media="screen" />
 <!-- /tmpl_if -->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.js"></script>
 <link rel="stylesheet" href="http://localhost/jquery.ui.all.css">
 
 <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/dada_mail_admin_js.js"         type="text/javascript"></script>
