--- a/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
@@ -260,12 +260,12 @@ Current Mass Mailings:
      <td> 
      <!-- tmpl_if current_list --> 
 
-	    <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" style="display:inline"> 
+	    <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" style="display:inline" class="stop_mass_mailing"> 
 	    <input type="hidden" name="f" value="sending_monitor" /> 
 	    <input type="hidden" name="id" value="<!-- tmpl_var message_id -->" /> 
 	    <input type="hidden" name="type" value="<!-- tmpl_var message_type -->" /> 
 	    <input type="hidden" name="process" value="kill" /> 
-	    <input type="submit" value="&#8855;" onclick="return killMonitoredSending(this.form);" <!-- tmpl_unless is_paused --><!-- tmpl_if sending_done -->disabled="disabled" class="disabled"<!-- tmpl_else --> class="alertive" <!--/tmpl_if --><!-- tmpl_else --> class="alertive" <!--/tmpl_unless --> title="Click to permanently STOP this mass mailing"  />
+	    <input type="submit" value="&#8855;" <!-- tmpl_unless is_paused --><!-- tmpl_if sending_done -->disabled="disabled" class="disabled"<!-- tmpl_else --> class="alertive killMonitoredSending" <!--/tmpl_if --><!-- tmpl_else --> class="alertive killMonitoredSending" <!--/tmpl_unless --> title="Click to permanently STOP this mass mailing"  />
 	    </form> 
 		<!-- /tmpl_if --> 
 		
