--- a/dada/DADA/Template/templates/add_screen.tmpl
+++ b/dada/DADA/Template/templates/add_screen.tmpl
@@ -200,8 +200,17 @@
 	<fieldset> 
 		<legend>Upload From File</legend>
 
+
+
+
+
+
+
+
 		<div id="show_progress" class="clearskiesbox">
-			<div id="progressbar"></div>
+			<div id="progressbarWrapper" style="width:500px;height:22px;margin-left:auto;margin-right:auto" class="ui-widget-default">
+			<div id="progressbar" style="height:100%;"></div>
+			</div>
 			<div id="upload_status"></div>
 		</div>
 
