This should fix up the add subscriber progress bar...

--- a/dada/DADA/Template/templates/add_screen.tmpl
+++ b/dada/DADA/Template/templates/add_screen.tmpl
@@ -207,6 +207,10 @@
 
 
 
+
+		<style>
+		.ui-progressbar .ui-progressbar-value { background-image: url(http://localhost/images/pbar-ani.gif); }
+		</style>
 		<div id="show_progress" class="clearskiesbox">
 			<div id="progressbarWrapper" style="width:500px;height:22px;margin-left:auto;margin-right:auto" class="ui-widget-default">
 			<div id="progressbar" style="height:100%;"></div>
