--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -14,32 +14,12 @@
   <link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/modalbox.css" type="text/css"  media="screen" />
 <!-- /tmpl_if -->
 
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.js"></script>
 <link rel="stylesheet" href="http://localhost/jquery.ui.all.css">
 
 <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/dada_mail_admin_js.js"         type="text/javascript"></script>
- 
-
-
-
-
-<!-- tmpl_if comment --> 
-
-
-
-		<!-- tmpl_if comment --> 
-			<!-- These will not be loaded, rather, "prototype_scriptaculous_package.js" will be used. -->
-			<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/prototype.js" type="text/javascript"></script>
-			<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/scriptaculous.js?load=effects" type="text/javascript"></script>
-		<!-- /tmpl_if --> 
-
-<!-- /tmpl_if  -->
-
-
-<!-- tmpl_if load_modalbox --> 
-  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/modalbox.js" type="text/javascript"></script>
-<!-- /tmpl_if --> 
 
 <!-- tmpl_if load_wysiwyg_editor --> 
 	<!-- tmpl_if using_fckeditor --> 
@@ -47,13 +27,15 @@
 	<!-- /tmpl_if -->
 	<!-- tmpl_if using_ckeditor --> 
 		<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js"         type="text/javascript" ></script>
-		<script src="<!-- tmpl_var CKEDITOR_URL -->/dada_mail_config.js" type="text/javascript" ></script>
+		<script src="<!-- tmpl_var CKEDITOR_URL -->/adapters/jquery.js"  type="text/javascript"></script>
 	<!-- /tmpl_if --> 
 	<!-- tmpl_if using_tiny_mce --> 
 		<script src="<!-- tmpl_var TINY_MCE_URL -->/tiny_mce.js"         type="text/javascript"></script>
 		<script src="<!-- tmpl_var TINY_MCE_URL -->/dada_mail_config.js" type="text/javascript"></script>
 	<!-- /tmpl_if -->
 <!-- /tmpl_if --> 
+
+
 
 </head>
  
