--- a/dada/DADA/Template/templates/sending_monitor_container_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_container_screen.tmpl
@@ -23,7 +23,7 @@
 	<div id="tracker_reports"> 
 		<fieldset> 
 		<legend>Tracker Reports</legend>
-			<div id="tracker_plugin"></div> 
+			<div id="tracker_reports_container"></div> 
 		</fieldset>
 
 	<!-- /tmpl_if --> 
