modernizing the Tracker plugin

--- a/dada/DADA/Template/templates/plugins/tracker/default.tmpl
+++ b/dada/DADA/Template/templates/plugins/tracker/default.tmpl
@@ -50,7 +50,7 @@
 </td> 
 <td> 
 <form action="<!-- tmpl_var Plugin_URL -->" method="post">
- <input type="button" value="Purge ALL Clickthrough Logs" class="alertive purge_log"/>
+ <input type="button" value="Purge ALL Clickthrough Logs" class="alertive tracker_purge_log"/>
 </form> 
 </td> 
 </tr> 
