More work on getting the Google Charts over to the new API. Whew!

--- a/dada/DADA/Template/templates/plugins/tracker/default.tmpl
+++ b/dada/DADA/Template/templates/plugins/tracker/default.tmpl
@@ -24,9 +24,13 @@
 
 	<div id="show_table_results_loading"></div>		
 	<div id="show_table_results"></div>
-	
+	<!-- 
 	<div id="subscriber_history_img_loading"></div>
 	<div id="subscriber_history_img"> </div> 
+	-->
+	<div id="subscriber_history_chart_loading"></div>
+	<div id="subscriber_history_chart"></div>
+	
 
 </fieldset> 
 
@@ -63,8 +67,13 @@
 <legend> 
  Current Subscribers by Email Address Domain
 </legend>  
-<div id="domain_breakdown_img_loading"></div>
-<div id="domain_breakdown_img"> </div> 
+<!-- 
+	<div id="domain_breakdown_img_loading"></div>
+	<div id="domain_breakdown_img"> </div> 
+--> 
+
+<div id="domain_break_down_chart_loading"></div>
+<div id="domain_break_down_chart" data-width="640" data-height="400" data-title="Total Subscribers: <!-- tmpl_var num_subscribers -->"></div> 
 
 </fieldset> 
 
