--- a/dada/DADA/Template/templates/plugins/tracker/country_geoip_chart.tmpl
+++ b/dada/DADA/Template/templates/plugins/tracker/country_geoip_chart.tmpl
@@ -1,47 +1,31 @@
 <!-- tmpl_if c_geo_ip_report --> 
-	<table class="stripedtable">
-	<tr> 
-	<td> 
 	
 	<div> 
-		<div style="max-height: 225px; overflow: auto; border:1px solid black">
-	 	<table class="stripedtable">
-	<tr style="background:#fff"> 
-	<td> 
-	<p><strong>Country</strong></p> 
-	</td> 
-	<td>
-	<p><strong><!-- tmpl_var type --></strong></p> 
-	</td> 
+		<div style="max-height: 400px; overflow: auto; border:1px solid black">
+			
+			
+<table id="geo_ip_by_country_<!-- tmpl_var type -->" class="stripedtable tablesorter"><!-- stripedtable -->	
+<thead> 			
+	<tr> 
+	<th align="left">Country</th> 
+	<th  align="right"><!-- tmpl_var type --></th> 
 	</tr> 
-
+</thead> 
+<tbody>
 	<!-- tmpl_loop c_geo_ip_report --> 
-	<tr <!-- tmpl_if __odd__ --> class="alt"<!-- /tmpl_if -->> 
-	<td>
-	<!-- tmpl_var country --> 
-	</td> 
-	<td align="right"> 
-	<!-- tmpl_var count --> 
-	</td> 
+
+	<tr <!-- tmpl_if __odd__ --> class="odd"<!-- tmpl_else -->class="even"<!-- /tmpl_if -->> 
+		
+		
+	<td><!-- tmpl_var name --></td> 
+	<td align="right"><!-- tmpl_var count --></td>
 	</tr> 
 	<!-- /tmpl_loop --> 
+</tbody>
 	</table> 
 	</div> 
 	</div> 
-
 	</td> 
-	<td> 
-	<p>
-	 <img src="<!-- tmpl_var c_geo_ip_img -->" style="border:1px solid black" />
-	</p> 
-	</td> 
-	</table>
 <!-- tmpl_else --> 
 	<p class="alert">Nothing to report.</p> 
 <!-- /tmpl_if --> 
-
-	<!-- tmpl_unless chrome --> 
-		</body> 
-		</html> 
-		
-	<!-- /tmpl_unless -->
