--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -17,10 +17,16 @@
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.js"></script>
+
+<script src="<!-- tmpl_var S_PROGRAM_URL -->/js/jquery.tablesorter.js"></script>
+
+
+
+
 <link rel="stylesheet" href="http://localhost/jquery.ui.all.css">
 
 <script type="text/javascript">
-	google.load('visualization', '1', {'packages':['corechart']});		
+	google.load('visualization', '1', {'packages':['corechart', 'geochart']});		
 </script>
 
 
