--- a/dada/DADA/Template/templates/plugins/tracker/message_report.tmpl
+++ b/dada/DADA/Template/templates/plugins/tracker/message_report.tmpl
@@ -202,18 +202,27 @@
 </fieldset> 
 
 <!-- tmpl_if can_use_country_geoip_data --> 
-
-
 <fieldset> 
 <legend> 
 	Clickthroughs by Country
 </legend>
 
-<div id="country_geoip_chart_clickthroughs_loading"> 
-</div> 
-<div id="country_geoip_chart_clickthroughs"> 
-</div>
 
+<table class="stripedtable">
+<tr> 
+<td> 
+	
+<div id="country_geoip_chart_clickthroughs_loading"></div> 
+<div id="country_geoip_chart_clickthroughs"></div>
+	</td> 
+	<td> 
+<div id="country_geoip_clickthrough_map_loading"></div> 
+<div id="country_geoip_clickthrough_map"></div> 
+	</td> 
+	</table>
+<!-- tmpl_else --> 
+	<p class="alert">Nothing to report.</p> 
+<!-- /tmpl_if --> 
 
 </fieldset> 
 
